--- a/views/add.html
+++ b/views/add.html
@@ -6,12 +6,13 @@
      <form action="/add/submit" method="POST">
       <label for="name_field">PAGE TITLE</label>
       <br>
-      <textarea name="title" autofocus type="text" id="title_field" rows='2' style="width: 600px"></textarea>
+      <textarea class="form-control" name="title" autofocus type="text" id="title_field" rows='2'></textarea>
       <br>
       <label for="text_field">PAGE CONTENT</label>
       <br>
-      <textarea name="body" type="text" id="content_field" rows="20"  style="width: 600px"></textarea> 
-      <input type="submit" value="Submit"/>
+      <textarea class="form-control" name="body" type="text" id="content_field" rows="20"  ></textarea> 
+      <br>
+      <input class="btn btn-warning" type="submit" value="Submit"/>
     </form>
     </div>
 {% endblock %}
