--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,9 @@
 {{ doc|page_link }} 
 
 {% block content %}
+    <br>
+    <br>
+    <h3>Hello {{user}} </h3>
     <h3>{{title}}</h3>
    	<ul>
    		<li>Fullstack Home</li>
