--- a/views/layout.html
+++ b/views/layout.html
@@ -18,11 +18,12 @@
             </button>
             <a class="navbar-brand" href="/" id='home'>WIKISTACK</a>
             <a class="navbar-brand" href="/add" id='addpage'>ADD PAGE</a>
+            <a class="navbar-brand" href="/signup" id="signup">SIGN UP</a>
+            <a class="navbar-brand" href="/login" id="login">LOG IN</a>
           </div>
         </div>
       </div>
   </body>
 <script> 
- 
-</script>  
+ </script>  
 </html>
